--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "portfolio",
+  "name": "portfolio-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "^6.1.0",
-    "express": "^4.16.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-hamburger-menu": "^1.1.1",
+    "react-scripts": "2.1.1",
     "react-scroll-to-component": "^1.0.2"
   },
   "scripts": {
@@ -25,7 +23,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "main": "server/server.js",
-  "proxy": "http://localhost:4000"
+  ]
 }
